(07/01/09)
*** New writeData procedure which writes data structures to files in the same
    format as used by readData.

(06/30/09)
*** New parameter -condor-g for swift-osg-ress-site-catalog which causes
    sites files to be generate which will use a local condor-g installation
    instead of making direct GRAM submissions.

(06/25/09)
*** 'global' keyword to allow top level declarations to be visible in all
    scopes.

(05/17/09)
*** Allow wrapper parameters to be specific in a file rather than on the
    commandline. This trades commandline length for an extra file to stage-in
    per job.
    A new parameter, wrapper.parameter.mode, is introduced to control this.
    This was feature request bug 201.

(05/07/09)
*** swift-log-to-cedps is removed. The functionality of generating
    .cedps format files is available by specifying the desired .cedps files
    in an invocation of swift-plot-log. Lack of widespread use of this
    command means a deprecation period is probably unnecessary.

(05/05/09)
*** New configuration property provenance.log which controls whether verbose
    provenance-related log information is recorded in the run log file or
    not. By default, this is false, which means that less information is
    output by default now than previously.

(04/27/09)
*** Swift 0.9 built from Swift SVN r2860 and cog SVN r2388

(03/30/09)
*** Removed support for .dtm file extension which was deprecated in Swift 0.4

(03/29/09)
*** Added console text interface to provide live information about swift 
    runs.

(03/27/09)
*** Environment variable SWIFT_EXTRA_INFO, when set in an environment profile,
    is executed with the result being recorded in wrapper logs. This allows
    arbitrary information about the remote environment to be gathered and
    returned to the submit side.

*** The wrapper.sh and seq.sh scripts that are deployed to remote sites to
    help with execution have been renamed to more Swift specific names, to