@@ -13,6 +13,8 @@
   <xs:element name="program">
     <xs:complexType>
       <xs:sequence>
+        <xs:element minOccurs="0" ref="imports"/>
+
         <xs:element minOccurs="0" ref="types"/>
 
         <xs:element maxOccurs="unbounded" minOccurs="0" name="procedure"
@@ -52,6 +54,14 @@
 	      </xs:sequence>
          </xs:complexType>
         </xs:element>        
+      </xs:sequence>
+    </xs:complexType>
+  </xs:element>
+
+  <xs:element name="imports">
+    <xs:complexType>
+      <xs:sequence>
+        <xs:element name="import" maxOccurs="unbounded" minOccurs="0" type="xs:string" />
       </xs:sequence>
     </xs:complexType>
   </xs:element>
