@@ -1,0 +1,6 @@
+import testimport;
+
+file f;
+
+int i = 6;
+
