@@ -1,0 +1,4 @@
+import testimport2;
+
+type file;
+
